--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -161,6 +161,6 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- by Constanza Painevilo Jamett -->
+    <!-- by Be Green -->
   </body>
 </html>
