--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -111,7 +111,7 @@
               <div class="col-md-9 col-lg-8 col-xl-8 wow-outer">
                 <div class="innset-xl-right-30 innset-xl-left-30">
                   <div class="wow slideInDown">
-                    <h3>Suscríbete para mantenerte informado</h3>
+                    <h3> ✧ ⸙ ¡Suscríbete para recibir nuevas ofertas! ✧ ⸙</h3>
                     <form class="rd-form rd-mailform rd-form-inline" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                       <div class="form-wrap">
                         <input class="form-input" id="subscribe-form-email" type="email" name="email" data-constraints="@Email @Required">
@@ -161,6 +161,5 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- by Constanza Painevilo Jamett -->
   </body>
 </html>
