--- a/Be Green/site/contacto.html
+++ b/Be Green/site/contacto.html
@@ -42,7 +42,7 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">INFORME DE TRANSPARENCIA</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
                     </ul>
                   </div>
@@ -85,7 +85,7 @@
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">CAUSAS</a></li>
+                  <li><a href="#">PRODUCTOS</a></li>
                   <li><a href="#">GALERÍA</a></li>
                   <li><a href="#">EQUIPO</a></li>
                   <li><a href="contacto.html">CONTACTOS</a></li>
@@ -101,7 +101,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;de&nbsp;<a href="">Ingeniería de Software - DUOC UC</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;<a href="">Be Green</a></p>
           </div>
         </div>
       </footer>
@@ -109,6 +109,5 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- by Constanza Painevilo Jamett -->
   </body>
 </html>
