--- a/Be Green/site/sobreNosotros.html
+++ b/Be Green/site/sobreNosotros.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <title>Sobre Nosotros</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
@@ -35,7 +37,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="100" height="51"/></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -57,14 +59,14 @@
           </nav>
         </div>
       </header>
-      <section class="parallax-container" data-parallax-img="images/bg-breadcrumbs-about1.jpg">
+      <section class="parallax-container" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/959564642781368370/76290.webp">
         <div class="parallax-content breadcrumbs-custom context-dark">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
                 <h2 class="breadcrumbs-custom-title">Sobre Nosotros</h2>
                 <ul class="breadcrumbs-custom-path">
-                  <li><a href="index.html">Fundación</a></li>
+                  <li><a href="index.html">Be Green</a></li>
                   <li class="active">Sobre Nosotros</li>
                 </ul>
               </div>
@@ -72,18 +74,18 @@
           </div>
         </div>
       </section>
-      <section class="section section-lg bg-gray-1 bg-gray-1-decor">
+      <section class="section section-lg bg--1 bg-gray-1-decor">
         <div class="container">
           <div class="row row-50">
-            <div class="col-lg-6 pr-xl-5"><img src="images/about-us-1-518x430.jpg" alt="" width="518" height="430"/>
+            <div class="col-lg-6 pr-xl-5"><img src="https://cdn.discordapp.com/attachments/959562345963733056/973769203100303380/scott-webb-hDyO6rr3kqk-unsplash.jpg" alt="" width="518" height="430"/>
             </div>
             <div class="col-lg-6">
               <h3>Sobre Nosotros</h3>
               <div class="text-with-divider">
                 <div class="divider"></div>
-                <h4 class="text-opacity-70">Estamos para ayudarte.</h4>
+                <h4 class="text-opacity-70">Be Green</h4>
               </div>
-              <p>La fundación Apoyo fue creada el año 1995, por iniciativa de un grupo de personas comprometidas por el bienestar de los ancianos los cuales efectuaron aportes en dinero y mano de obra para lograr construir la casa de reposo.</p>
+              <p>Con la misión de darle vida a los espacios, trayendo lo mejor de la naturaleza a los hogares de cada persona. Queremos llevar las plantas a los distintos rincones de la ciudad, aportando así nuestro granito de arena en construir un mundo más verde.</p>
             </div>
           </div>
         </div>
@@ -97,7 +99,7 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-50 row-lg-60">
-              <div class="col-12"><a href="index.html"><img src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+              <div class="col-12"><a href="index.html"><img src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="207" height="51"/></a></div>
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
@@ -117,7 +119,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;de&nbsp;<a href="">Ingeniería de Software - DUOC UC</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;de&nbsp;<a href="">Programación Web- DUOC UC</a></p>
           </div>
         </div>
       </footer>
@@ -125,6 +127,5 @@
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-
   </body>
 </html>
