--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Fundacion Apoyo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <title>Be Green</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +36,7 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="100" height="51"/></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -60,13 +61,13 @@
       </header>
       <!-- Swiper-->
       <section class="section section-lg section-main-bunner section-main-bunner-filter">
-        <div class="main-bunner-img" style="background-image: url(images/bg-breadcrumbs-about1.jpg); background-size: cover;"></div>
+        <div class="main-bunner-img" style="background-image: url(https://cdn.discordapp.com/attachments/959562345963733056/959564642781368370/76290.webp); background-size: cover;"></div>
         <div class="main-bunner-inner">
           <div class="container">
             <div class="row row-50 justify-content-lg-center align-items-lg-center">
               <div class="col-lg-12">
                 <div class="bunner-content-modern text-center">
-                  <h1 class="main-bunner-title">Fundación Apoyo</h1>
+                  <h1 class="main-bunner-title">Be Green</h1>
                   <p>Somos una organización dedicada a prestar ayuda a personas de la tercera edad, principalmente entregamos el servicio de casa de reposo para ancianos.  En la casa de reposo se entregan cuidados médicos y estadía parcial o permanente a los residentes.</p>
                 </div>
               </div>
@@ -92,7 +93,7 @@
               <div class="innset-xl-left-70">
                 <h3>AYUDANOS</h3>
                 <p class="text-opacity-80">- Anualmente recibimos ayuda a través de colectas, aportes y el trabajo de jóvenes que asisten a efectuar trabajo social, ayudando en realizar algún mantenimiento a la infraestructura y actividades con los ancianos.</p>
-                <p class="text-opacity-80">- La fundación posee una casona que es usada como oficina central y una casa patronal que está acondicionada como casa de reposo, autorizada por el ministerio de salud, donde presta sus servicios de cuidado y atenciones menores de salud.</p>
+                <p class="text-opacity-80">- Be Green posee una casona que es usada como oficina central y una casa patronal que está acondicionada como casa de reposo, autorizada por el ministerio de salud, donde presta sus servicios de cuidado y atenciones menores de salud.</p>
               
                 <!-- ICONOS DINAMICOS -->
                 <!-- AGREGAR BLOQUE DE REGISTRAR -->
@@ -104,7 +105,7 @@
       <!-- .... -->
 
       <!-- .... -->
-      <section class="parallax-container bg-gray-600" data-parallax-img="images/bg-breadcrumbs-about1.jpg">
+      <section class="parallax-container bg-gray-600" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/996641787370274816/feey-7d7OR-RvufU-unsplash_3.jpg">
         <div class="parallax-content section-xxl text-center">
           <div class="container">
             <div class="row justify-content-md-center">
@@ -133,7 +134,7 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-50 row-lg-60">
-              <div class="col-12"><a href="index.html"><img src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+              <div class="col-12"><a href="index.html"><img src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="207" height="51"/></a></div>
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
