--- a/Be Green/site/PagDonador.html
+++ b/Be Green/site/PagDonador.html
@@ -2,7 +2,7 @@
 <html class="wide wow-animation" lang="en">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <head>
-    <title>Personal de Salud</title>
+    <title>Donadores</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,12 +43,11 @@
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">ARCHIVOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">PACIENTES</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">MEDICAMENTOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">INFORMES</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">CORREOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">BDD</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#"></a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">|</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">CERRAR SESIÓN</a></li>
                     </ul>
@@ -59,12 +58,12 @@
           </nav>
         </div>
       </header>
-      <section class="parallax-container" data-parallax-img="images/bg-breadcrumbs-about1.jpg">
+      <section class="parallax-container" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/959564642781368370/76290.webp">
         <div class="parallax-content breadcrumbs-custom context-dark">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
-                <h2 class="breadcrumbs-custom-title">Personal de Salud</h2>
+                <h2 class="breadcrumbs-custom-title">Donadores</h2>
                 <p>----------------------------------</p>
               </div>
             </div>
@@ -80,8 +79,8 @@
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">CAUSAS</a></li>
-                  <li><a href="#">GALERÍA</a></li>
+                  <li><a href="#">DONADORES</a></li>
+                  <li><a href="#">PRODUCTOS</a></li>
                   <li><a href="#">EQUIPO</a></li>
                   <li><a href="contacto.html">CONTACTOS</a></li>
                 </ul>
@@ -96,7 +95,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;de&nbsp;<a href="">Ingeniería de Software - DUOC UC</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span>Copyright&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>.&nbsp;</span><span>Todos los derechos reservados.</span><span>&nbsp;</span>Proyecto&nbsp;de&nbsp;<a href="">Programación Web - DUOC UC</a></p>
           </div>
         </div>
       </footer>
