--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Poppins:300,300i,400,500,600,700,800,900,900i%7CRoboto:400%7CRubik:100,400,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -14,7 +14,7 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="Está utilizando un navegador obsoleto. Para una experiencia de navegación más rápida y segura, actualice."></a></div>
     <div class="preloader">
       <div class="preloader-body">
         <div class="cssload-container">
@@ -36,15 +36,15 @@
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="100" height="51"/></a></div>
+                  <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" width="100" height="51"/></a></div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">DONADORES</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">INFORMES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="donadores.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
                     </ul>
                   </div>
@@ -68,7 +68,7 @@
               <div class="col-lg-12">
                 <div class="bunner-content-modern text-center">
                   <h1 class="main-bunner-title">Be Green</h1>
-                  <p>Somos una organización dedicada a prestar ayuda a personas de la tercera edad, principalmente entregamos el servicio de casa de reposo para ancianos.  En la casa de reposo se entregan cuidados médicos y estadía parcial o permanente a los residentes.</p>
+                  <p>Más verde en tu hogar</p>
                 </div>
               </div>
             </div>
@@ -91,9 +91,9 @@
             </div>
             <div class="col-lg-6 col-xl-5">
               <div class="innset-xl-left-70">
-                <h3>AYUDANOS</h3>
-                <p class="text-opacity-80">- Anualmente recibimos ayuda a través de colectas, aportes y el trabajo de jóvenes que asisten a efectuar trabajo social, ayudando en realizar algún mantenimiento a la infraestructura y actividades con los ancianos.</p>
-                <p class="text-opacity-80">- Be Green posee una casona que es usada como oficina central y una casa patronal que está acondicionada como casa de reposo, autorizada por el ministerio de salud, donde presta sus servicios de cuidado y atenciones menores de salud.</p>
+                <h5>¡TRAYENDO LO MEJOR DE LA NATURALEZA A TU HOGAR!</h5>
+                <p class="text-opacity-80">- Be Green nació con la misión de darle vida a los espacios, trayendo lo mejor de la naturaleza a los hogares de cada persona</p>
+                <p class="text-opacity-80">- Queremos llevar las plantas a los distintos rincones de la ciudad, aportando así nuestro granito de arena en construir un mundo más verde.</p>
               
                 <!-- ICONOS DINAMICOS -->
                 <!-- AGREGAR BLOQUE DE REGISTRAR -->
@@ -105,21 +105,21 @@
       <!-- .... -->
 
       <!-- .... -->
-      <section class="parallax-container bg-gray-600" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/996641787370274816/feey-7d7OR-RvufU-unsplash_3.jpg">
+      <section class="parallax-container bg-gray-600" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/996911468110958672/liubov-ilchuk-_6rR_iP06p4-unsplash.jpg">
         <div class="parallax-content section-xxl text-center">
           <div class="container">
             <div class="row justify-content-md-center">
               <div class="col-md-9 col-lg-8 col-xl-8 wow-outer">
                 <div class="innset-xl-right-30 innset-xl-left-30">
                   <div class="wow slideInDown">
-                    <h3> ✧ ⸙ ¡Suscríbete para recibir nuevas ofertas! ✧ ⸙</h3>
+                    <h3> ✧  ¡Deja tu correo para que te puedas contactar con nosotros! ✧ </h3>
                     <form class="rd-form rd-mailform rd-form-inline" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                       <div class="form-wrap">
                         <input class="form-input" id="subscribe-form-email" type="email" name="email" data-constraints="@Email @Required">
                         <label class="form-label" for="subscribe-form-email">Ingresa tu correo electrónico</label>
                       </div>
                       <div class="form-button">
-                        <button class="button button-primary button-lg" type="submit">Suscribete</button>
+                        <button class="button button-primary button-lg" type="submit">Enviar</button>
                       </div>
                     </form>
                   </div>
@@ -134,12 +134,12 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-50 row-lg-60">
-              <div class="col-12"><a href="index.html"><img src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="207" height="51"/></a></div>
+              <div class="col-12"><a href="index.html"><img src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" alt="" width="207" height="51"/></a></div>
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">CAUSAS</a></li>
-                  <li><a href="#">GALERÍA</a></li>
+                  <li><a href="PagDonador.html"></a></li>
+                  <li><a href="#">PRODUCTOS</a></li>
                   <li><a href="#">EQUIPO</a></li>
                   <li><a href="contacto.html">CONTACTOS</a></li>
                 </ul>
