--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -43,7 +43,7 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="donadores.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
                     </ul>
@@ -138,7 +138,7 @@
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="PagDonador.html"></a></li>
+                  <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
                   <li><a href="#">PRODUCTOS</a></li>
                   <li><a href="#">EQUIPO</a></li>
                   <li><a href="contacto.html">CONTACTOS</a></li>
