--- a/Be Green/site/iniciarSesionDonador.html
+++ b/Be Green/site/iniciarSesionDonador.html
@@ -44,14 +44,18 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">PRODUCTOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="PagDonador.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="productos.html">PRODUCTOS</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                     </ul>
                   </div>
                 </div>
                 <!-- Linea de división -->
                 <div class="linea"></div>
+                <!--Tiempo-->
+                <div class="api-temp" id="temperatura"> 
+                  <i class="fa-duotone fa-temperature-half"></i>
+                </div>
                 <!-- RD Navbar bottons-->
                 <a class="button button-primary button-sm" href="hazteDonador.html">HAZTE DONADOR</a>
               </div>
