--- a/Be Green/site/PagDonador.html
+++ b/Be Green/site/PagDonador.html
@@ -38,6 +38,10 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/959562345963733056/959586596397654097/Simple_Blanco_Moderno_Abstracto_Logo_3.png" alt="" width="100" height="51"/></a></div>
+                </div> 
+                <!--Tiempo-->
+                <div class="api-temp" id="temperatura"> 
+                  <i class="fa-duotone fa-temperature-half"></i>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -47,7 +51,7 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">|</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">CERRAR SESIÓN</a></li>
                     </ul>
