--- a/Be Green/site/hazteDonador.html
+++ b/Be Green/site/hazteDonador.html
@@ -47,12 +47,16 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">INFORME DE TRANSPARENCIA</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                     </ul>
                   </div>
                 </div>
                 <!-- Linea de división -->
                 <div class="linea"></div>
+                <!--Tiempo-->
+                <div class="api-temp" id="temperatura"> 
+                  <i class="fa-duotone fa-temperature-half"></i>
+                </div>
                 <!-- RD Navbar bottons-->
                 <a class="button button-primary button-sm" href="iniciarSesion.html">INICIAR SESIÓN</a>
               </div>
@@ -132,7 +136,7 @@
                   <li><a href="#">CAUSAS</a></li>
                   <li><a href="#">GALERÍA</a></li>
                   <li><a href="#">EQUIPO</a></li>
-                  <li><a href="contacto.html">CONTACTOS</a></li>
+                  <li><a href="#contact">CONTACTOS</a></li>
                 </ul>
               </div>
               <div class="col-12">
