--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -37,20 +37,25 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" width="100" height="51"/></a></div>
-                </div>
+                </div> 
+                
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="productos.html">PRODUCTOS</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact" >CONTACTO</a></li>
                     </ul>
                   </div>
                 </div>
                 <!-- Linea de división -->
                 <div class="linea"></div>
+                <!--Tiempo-->
+                <div class="api-temp" id="temperatura"> 
+                  <i class="fa-duotone fa-temperature-half"></i> 
+              </div>
                 <!-- RD Navbar bottons-->
                 <a class="button button-primary button-sm" href="iniciarSesion.html">INICIAR SESIÓN</a>
                 <a class="button button-primary button-sm" href="hazteDonador.html">HAZTE DONADOR</a>
@@ -105,7 +110,7 @@
       <!-- .... -->
 
       <!-- .... -->
-      <section class="parallax-container bg-gray-600" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/996911468110958672/liubov-ilchuk-_6rR_iP06p4-unsplash.jpg">
+      <section class="parallax-container bg-gray-600" id="contact" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/996911468110958672/liubov-ilchuk-_6rR_iP06p4-unsplash.jpg">
         <div class="parallax-content section-xxl text-center">
           <div class="container">
             <div class="row justify-content-md-center">
