--- a/Be Green/site/productos.html
+++ b/Be Green/site/productos.html
@@ -45,12 +45,16 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="donadores.html">DONADORES</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacto.html">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                     </ul>
                   </div>
                 </div>
                 <!-- Linea de división -->
                 <div class="linea"></div>
+                <!--Tiempo-->
+                <div class="api-temp" id="temperatura"> 
+                  <i class="fa-duotone fa-temperature-half"></i>
+              </div>
                 <!-- RD Navbar bottons-->
                 <a class="button button-primary button-sm" href="iniciarSesion.html">INICIAR SESIÓN</a>
                 <a class="button button-primary button-sm" href="hazteDonador.html">HAZTE DONADOR</a>
