--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -33,8 +33,7 @@
               <div class="rd-navbar-main">
                 <!-- RD Navbar Panel-->
                 <div class="rd-navbar-panel">
-                  <!-- RD Navbar Toggle-->
-                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" width="100" height="51"/></a></div>
                 </div> 
@@ -86,12 +85,10 @@
           <div class="row row-50 justify-content-lg-between align-items-lg-center">
             <div class="col-lg-6">
               <div class="box-img-animate">
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 0, &quot;x&quot;: 140,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1444392061186-9fc38f84f726.avif" alt="" width="300px"></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 150, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1550948390-6eb7fa773072.avif" alt="" width="300px"></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:70, &quot;x&quot;: -250,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1585320806297-9794b3e4eeae.avif" alt="" width="300px"></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:20, &quot;x&quot;: 20,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1601654253194-260e0b6984f9.avif" alt="" width="300px"></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:60, &quot;x&quot;: 70,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1623358519330-00f61d89396b.avif" alt="" width="300px"></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:0, &quot;x&quot;: 140,  &quot;smoothness&quot;: 50 }"><img src="images/recursos/photo-1490750967868-88aa4486c946.avif" alt="" width="300px"></div>
+                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 0, &quot;x&quot;: 140,  &quot;smoothness&quot;: 50 }"><img src="https://cdn.discordapp.com/attachments/959562345963733056/967837586582294589/element5-digital-z6i_UCBuu5Q-unsplash.jpg" alt="" width="300px"></div>
+                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 150, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"><img src="https://cdn.discordapp.com/attachments/959562345963733056/967837586779414608/peter-zagar-bLgWa9b0ioY-unsplash.jpg" alt="" width="300px"></div>
+                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:70, &quot;x&quot;: -250,  &quot;smoothness&quot;: 50 }"><img src="https://cdn.discordapp.com/attachments/959562345963733056/967837587840569384/francesco-gallarotti-ruQHpukrN7c-unsplash.jpg" alt="" width="300px"></div>
+                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:20, &quot;x&quot;: 20,  &quot;smoothness&quot;: 50 }"><img src="https://cdn.discordapp.com/attachments/959562345963733056/973769202873802782/bruno-adam-4j4cxthr8tI-unsplash.jpg" alt="" width="300px"></div>
               </div>
             </div>
             <div class="col-lg-6 col-xl-5">
@@ -144,9 +141,8 @@
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                   <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
-                  <li><a href="#">PRODUCTOS</a></li>
-                  <li><a href="#">EQUIPO</a></li>
-                  <li><a href="contacto.html">CONTACTOS</a></li>
+                  <li><a href="productos.html">PRODUCTOS</a></li>
+                  <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
               </div>
               <div class="col-12">
